	  * evaluate_llm_agent: function to evaluate a simple LLM/VLM agent on a
	  task set and save and report the evaluation results
	  * evaluate_llm_agent_mp: a function to evaluate on a task set in
	  parallel through Python multiprocessing
	  * evaluate_llm_agent_mpi: a function to evaluate on a task set within
	  MPI environment

2025-09-02 Danyang Zhang <zdy004007@126.com>

	v4.2

	Added option to support manual simulator restart at environment reset.

	* android_env/environment.py
	* android_env/components/coordinator.py
	* android_env/interfaces/env.py

	New Docker image

	* build-docker/Dockerfile
	* Makefile

2025-05-07 Danyang Zhang <zdy004007@126.com>

	Interface updates

	* Updated interfaces for android_env.interfaces.env.Environment

	New mechanisms

	* Added cached TaskManager cleaning mechanism in Coordinator

	Other fixes

	* android_env/components/simulators/remote/daemon.py
	* android_env/interfaces/timestep.py
	* (Logcat thread cleaning): android_env/components/simulators/base_simulator.py

2025-02-26 Danyang Zhang <zdy004007@126.com>

	Fixed bugs in TapActionWrapper and VhIoWrapper

	* Fixed bugs about reward accumulation
	* Added handling for empty view hierarchy
	* Fixed bugs for environment step statistics
	* More logs

	Fixed a bug in EmulatorSimulator

2024-12-18 Danyang Zhang <zdy004007@126.com>

	v4.1

	Fixed a few essential bugs.

	* (cache_until mechanism): The roles of waiting nodes and notifier nodes
	in cache_until mechanism are in reverse. Fixed.
	  * android_env/components/task_manager.py
	* (Event sources resetting): Event sources are not correctly reset during
	task resetting. Fixed.
	  * android_env/components/task_manager.py
	* (Events resetting): Events may be triggered mistakenly by the stale
	emulator status owing to the delay of emulator. Fixed.
	  * android_env/components/coordinator.py
	  * android_env/environment.py

	Fixed minor bugs.

	* (Requirements of Gymnasium and dm-env): Gymnasium and dm-env are marked