@@ -1,4 +1,19 @@
 #!/usr/bin/python3
+# Copyright 2025 SJTU X-Lance Lab
+# 
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+# 
+#     http://www.apache.org/licenses/LICENSE-2.0
+# 
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+# 
+# Created by Danyang Zhang @X-Lance
 
 from android_env.templates.evaluators import evaluate_llm_agent, evaluate_llm_agent_mp, evaluate_llm_agent_mpi
 from pathlib import Path
